--- a/index.css
+++ b/index.css
@@ -57,6 +57,7 @@
     font-weight: 600;
     border-radius: 50px;
     border: none;
+    cursor: pointer;
 
 }
 
@@ -186,6 +187,10 @@
 
 
 }
+a{
+    text-decoration: none;
+    color: black;
+}
 
 .doctor1 doctor2 doctor3{
     display: flex;
@@ -218,14 +223,11 @@
 .ln2{
     display: flex; 
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
     align-items: center;
-    height: 85%;
-    width: 1000px;
-    align-items: center;
-    padding-left: 250px;
-    padding-right: 250px;
-    margin-top: 50px;
+    gap: 100px;
+    padding-bottom: 100px;
+  
 }
 
 .new1{
@@ -243,9 +245,9 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-   /* text-align: center;
-    align-items: center; */
-    margin-top: 20px;
+ 
+    align-items: center; 
+  
     gap: 30px;
     /* margin-left: -30%; */
 }
@@ -258,34 +260,38 @@
 .makeappointment{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    /* background-color: #E5E5E5; */
-    height: 700px;
-    margin-top: 100px;
-    margin-left: 150px;
-    width: 1000px;
+    justify-content: space-around;
+
+   
 }
 .dp5{
-    
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.formmain{
+    width: 50%;
 }
 .appointment{
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+   
     
 
 }
 .form{
     display: flex;
-    gap: 30px;
+    flex-direction: row;
+    align-items: center;
     margin-top: 30px;
+    gap: 30px;
+  
 }
 .form-group{
-    dispaly: flex;
-    flex-direction: column;
-    width: 50%;    
+    
 }
 input{
     width: 300px;
@@ -293,6 +299,7 @@ input{
     border-radius: 5px;
     border: 0.5px solid grey;
     padding-left: 10px;
+    outline: none;
 }
 .form-group select{
     width: 320px;
@@ -309,7 +316,7 @@ input{
     /* height: 200px; */
 }
 .form-group1 input{
-    width: 665px;
+    width: 650px;
     background-color:#F9F9F9; ;
     /* height: 200px; */
 }
@@ -317,6 +324,7 @@ input{
     width: 665px;
     height: 150px;
      background-color:#F9F9F9; 
+     outline: none;
 }
 
 .form button{
@@ -340,11 +348,9 @@ input{
 .info{
     display: flex;
     flex-direction: row;
-    /* justify-content: space-around; */
-    margin-top: 50px;
-    height: 350px;
-    width: 1000px;
-    margin-left: 190px;
+    justify-content: center;
+    gap: 100px;
+  
 }
 
 .contactinfo{
@@ -356,8 +362,18 @@ input{
     border-radius:red;
     height: 300px;
     width: 300px;
-    box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1);
-    padding-left: 30px;}
+    
+    /* box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1); */
+    /* padding-left: 30px; */
+}
+
+.contactinfo h1{
+  margin-top: 0;
+}
+
+.contactinfo h3{
+    margin-bottom: 0;
+}
 
 .newsinfo{
     display: flex;
@@ -368,33 +384,32 @@ input{
     border-radius:red;
     height: 300px;
     width: 300px;
-    box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1);
-    padding-left: 30px;
+    /* box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1);
+    padding-left: 30px; */
     font-size: 30px;
 }
 .nn1{
-    margin-top: 10px;
+    
     display: flex;
     flex-direction: row;
+    align-items: center;
     gap: 20px;
 }
 
 .openinginfo{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    
     /* align-items: center; */
     /* text-align: center; */
     border-radius:red;
     height: 300px;
     width: 300px;
-    box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1);
-    padding-left: 30px;
-/* font-size: 30px;} */}
-
-.openinginfo p{
-    margin-bottom: 100px;
+    margin-top: 30px;
+    /* box-shadow: 0px 4px 6px -1px rgba(0, 0, 0, 0.1);
+    padding-left: 30px; */
+/* font-size: 30px;} */
 }
+
+
 
 .footer{
     display: flex;
